Add localization for screen titles

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,3 +1,6 @@
 {
-    "clock": "Reloj"
+    "clockTitle": "Reloj",
+    "alarmTitle": "Alarma",
+    "timerTitle": "Temporizador",
+    "stopwatchTitle": "Cronómetro"
 }
