Add localization to settings

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -14,5 +14,7 @@
   "stopwatchTitle": "Stopwatch",
   "@stopwatchTitle": {
     "description": "Title of the stopwatch screen"
-  }
+  },
+  "generalSettingGroup": "General",
+  "appearanceSettingGroup": "Appearance"
 }
