Localize all settings

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -15,20 +15,152 @@
   "@stopwatchTitle": {
     "description": "Title of the stopwatch screen"
   },
+  "system": "System",
+  "@system": {},
   "generalSettingGroup": "General",
   "@generalSettingGroup": {},
+  "generalSettingGroupDescription": "Set app wide settings like time format",
+  "@generalSettingGroupDescription": {},
+  "languageSetting": "Language",
+  "@languageSettingG": {},
+  "dateFormatSetting": "Date Format",
+  "@dateFormatSetting": {},
+  "timeFormatSetting": "Time Format",
+  "@timeFormatSetting": {},
+  "timeFormat12": "12 hours",
+  "@timeFormat12": {},
+  "timeFormat24": "24 hours",
+  "@timeFormat24": {},
+  "timeFormatDevice": "Device Settings",
+  "@timeFormatDevice": {},
+  "showSecondsSetting": "Show Seconds",
+  "@showSecondsSetting": {},
+  "timePickerSetting": "Time Picker",
+  "@timePickerSetting": {},
+  "pickerDial": "Dial",
+  "@pickerDial": {},
+  "pickerInput": "Input",
+  "@pickerInput": {},
+  "pickerSpinner": "Spinner",
+  "@pickerSpinner": {},
+  "durationPickerSetting": "Duration Picker",
+  "@timePickerSetting": {},
+  "pickerRings": "Rings",
+  "@pickerRings": {},
+  "swipeActionSetting": "Swipe Action",
+  "@swipeActionSetting": {},
+  "swipActionCardAction": "Card Actions",
+  "@swipActionCardAction": {},
+  "swipeActionCardActionDescription": "Swipe left or right on the card to perform actions",
+  "@swipeActionCardActionDescription": {},
+  "swipActionSwitchTabs": "Switch Tabs",
+  "@swipActionSwitchTabs": {},
+  "swipeActionSwitchTabsDescription": "Swipe between tabs",
+  "@swipeActionSwitchTabsDescription": {},
+  "melodiesSetting": "Melodies",
+  "@melodiesSetting": {},
+  "tagsSetting": "Tags",
+  "@tagsSetting": {},
+  "vendorSetting": "Vendor Setting",
+  "@vendorSetting": {},
+  "vendorSettingDescription": "Manually disable vendor-specific optimizations",
+  "@vendorSettingDescription": {},
+  "batteryOptimizationSetting": "Disable Battery Optimization",
+  "@batteryOptimizationSetting": {},
+  "batteryOptimizationSettingDescription": "Disable battery optimization for this app to prevent alarms from being delayed",
+  "@batteryOptimizationSettingDescription": {},
+  "allowNotificationSettingDescription": "Allow lock screen notifications for alarms and timers",
+  "@allowNotificationSettingDescription": {},
+  "autoStartSettingDescription": "Some devices require Auto Start to be enabled for alarms to ring while app is closed",
+  "@autoStartSettingDescription": {},
+  "allowNotificationSetting": "Allow Notifications",
+  "@allowNotificationSetting": {},
+  "autoStartSetting": "Auto Start",
+  "animationSettingGroup": "Animations",
+  "@animationSettingGroup": {},
+  "animationSpeedSetting": "Animation Speed",
+  "@animationSpeedSetting": {},
+  "extraAnimationSetting": "Extra Animations",
+  "@extraAnimationSetting": {},
+  "@autoStartSetting": {},
   "appearanceSettingGroup": "Appearance",
   "@appearanceSettingGroup": {},
+  "appearanceSettingGroupDescription": "Set themes, colors and change layout",
+  "@appearanceSettingGroupDescription": {},
+  "nameField": "Name",
+  "@nameField": {},
+  "colorSetting": "Color",
+  "@colorSetting": {},
+  "textColorSetting": "Text",
+  "@textColorSetting": {},
+  "colorSchemeNamePlaceholder": "Color Scheme",
+  "@colorSchemeNamePlaceholder": {},
+  "colorSchemeBackgroundSettingGroup": "Background",
+  "@colorSchemeBackgroundSettingGroup": {},
+  "colorSchemeAccentSettingGroup": "Accent",
+  "@colorSchemeAccentSettingGroup": {},
+  "colorSchemeErrorSettingGroup": "Error",
+  "@colorSchemeErrorSettingGroup": {},
+  "colorSchemeCardSettingGroup": "Card",
+  "@colorSchemeCardSettingGroup": {},
+  "colorSchemeOutlineSettingGroup": "Outline",
+  "@colorSchemeOutlineSettingGroup": {},
+  "colorSchemeShadowSettingGroup": "Shadow",
+  "@colorSchemeShadowSettingGroup": {},
+  "colorSchemeUseAccentAsOutlineSetting": "Use Accent as Outline",
+  "@colorSchemeUseAccentAsOutlineSetting": {},
+  "colorSchemeUseAccentAsShadowSetting": "Use Accent as Shadow",
+  "@colorSchemeUseAccentAsShadowSetting": {},
+  "styleThemeNamePlaceholder": "Style Theme",
+  "@styleThemeNamePlaceholder": {},
+  "styleThemeShadowSettingGroup": "Shadow",
+  "@styleThemeShadowSettingGroup": {},
+  "styleThemeShapeSettingGroup": "Shape",
+  "@styleThemeShapeSettingGroup": {},
+  "styleThemeElevationSetting": "Elevation",
+  "@styleThemeElevationSetting": {},
+  "styleThemeRadiusSetting": "Corner Roundness",
+  "@styleThemeRadiusSetting": {},
+  "styleThemeOpacitySetting": "Opacity",
+  "@styleThemeOpacitySetting": {},
+  "styleThemeBlurSetting": "Blur",
+  "@styleThemeBlurSetting": {},
+  "styleThemeSpreadSetting": "Spread",
+  "@styleThemeSpreadSetting": {},
+  "styleThemeOutlineSettingGroup": "Outline",
+  "@styleThemeOutlineSetting": {},
+  "styleThemeOutlineWidthSetting": "Width",
+  "@styleThemeOutlineWidthSetting": {},
   "accessibilitySettingGroup": "Accessibility",
   "@accessibilitySettingGroup": {},
   "backupSettingGroup": "Backup",
   "@backupSettingGroup": {},
   "developerOptionsSettingGroup": "Developer Options",
   "@developerOptionsSettingGroup": {},
+  "showIstantAlarmButtonSetting": "Show Instant Alarm Button",
+  "@showIstantAlarmButtonSetting": {},
+  "showIstantTimerButtonSetting": "Show Instant Timer Button",
+  "@showIstantTimerButtonSetting": {},
+  "logsSettingGroup": "Logs",
+  "@logsSettingGroup": {},
+  "maxLogsSetting": "Max Logs",
+  "@maxLogsSetting": {},
+  "alarmLogSetting": "Alarm Logs",
+  "@alarmLogSetting": {},
   "aboutSettingGroup": "About",
   "@aboutSettingGroup": {},
   "restoreSettingGroup": "Restore default values",
   "@restoreSettingGroup": {},
+  "resetButton": "Reset",
+  "@resetButton": {},
+  "previewLabel": "Preview",
+  "@previewLabel": {},
+  "cardLabel": "Card",
+  "@cardLabel": {},
+  "accentLabel": "Accent",
+  "@accentLabel": {},
+  "errorLabel": "Error",
+  "@errorLabel": {},
   "displaySettingGroup": "Display",
   "@displaySettingGroup": {},
   "reliabilitySettingGroup": "Reliability",
@@ -41,8 +173,16 @@
   "@useMaterialYouColorSetting": {},
   "materialBrightnessSetting": "Brightness",
   "@materialBrightnessSetting": {},
+  "materialBrightnessSystem": "System",
+  "@materialBrightnessSystem": {},
+  "materialBrightnessLight": "Light",
+  "@materialBrightnessLight": {},
+  "materialBrightnessDark": "Dark",
+  "@materialBrightnessDark": {},
   "overrideAccentSetting": "Override Accent Color",
   "@overrideAccentSetting": {},
+  "accentColorSetting": "Accent Color",
+  "@accentColorSetting": {},
   "useMaterialStyleSetting": "Use Material Style",
   "@useMaterialStyleSetting": {},
   "styleThemeSetting": "Style Theme",
@@ -65,6 +205,35 @@
   "@appearanceSettingGroupDescription": {},
   "backupSettingGroupDescription": "Export or Import your settings locally",
   "@backupSettingGroupDescription": {},
+  "alarmWeekdaysSetting": "Week Days",
+  "@alarmWeekdaysSetting": {},
+  "mondayLetter": "M",
+  "@mondayLetter": {},
+  "tuesdayLetter": "T",
+  "@tuesdayLetter": {},
+  "wednesdayLetter": "W",
+  "@wednesdayLetter": {},
+  "thursdayLetter": "T",
+  "@thursdayLetter": {},
+  "fridayLetter": "F",
+  "@fridayLetter": {},
+  "saturdayLetter": "S",
+  "@saturdayLetter": {},
+  "sundayLetter": "S",
+  "alarmDatesSetting": "Dates",
+  "@alarmDatesSetting": {},
+  "alarmRangeSetting": "Date Range",
+  "@alarmRangeSetting": {},
+  "alarmIntervalSetting": "Interval",
+  "@alarmIntervalSetting": {},
+  "alarmIntervalDaily": "Daily",
+  "@alarmIntervalDaily": {},
+  "alarmIntervalWeekly": "Weekly",
+  "@alarmIntervalWeekly": {},
+  "alarmDeleteAfterRingingSetting": "Delete After Dismiss",
+  "@alarmDeleteAfterRingingSetting": {},
+  "alarmDeleteAfterFinishingSetting" : "Delete After Finishing",
+  "@alarmDeleteAfterFinishingSetting": {},
   "selectTime": "Select Time",
   "@selectTime": {},
   "cancelButton": "Cancel",
@@ -93,15 +262,17 @@
   "@scheduleTypeWeek": {},
   "scheduleTypeWeekDescription": "Will repeat on the specified week days",
   "@scheduleTypeWeekDescription": {},
-  "scheduleTypeData": "On Specific Dates",
-  "@scheduleTypeData": {},
+  "scheduleTypeDate": "On Specific Dates",
+  "@scheduleTypeDate": {},
   "scheduleTypeRange": "Date Range",
   "@scheduleTypeRange": {},
   "scheduleTypeDateDescription": "Will repeat on the specified dates",
   "@scheduleTypeDateDescription": {},
   "scheduleTypeRangeDescription": "Will repeat during the specified date range",
   "@scheduleTypeRangeDescription": {},
-  "soundSettingGroup": "Sound and Vibration",
+  "soundAndVibrationSettingGroup": "Sound and Vibration",
+  "@soundAndVibrationSettingGroup": {},
+  "soundSettingGroup": "Sound",
   "@soundSettingGroup": {},
   "settingGroupMore": "More",
   "@settingGroupMore": {},
@@ -111,22 +282,34 @@
   "@vibrationSetting": {},
   "audioChannelSetting": "Audio Channel",
   "@audioChannelSetting": {},
+  "audioChannelAlarm": "Alarm",
+  "@audioChannelAlarm": {},
+  "audioChannelNotification": "Notification",
+  "@audioChannelNotification": {},
+  "audioChannelRingtone": "Ringtone",
+  "@audioChannelRingtone": {},
+  "audioChannelMedia": "Media",
+  "@audioChannelMedia": {},
   "volumeSetting": "Volume",
   "@volumeSetting": {},
   "risingVolumeSetting": "Rising Volume",
   "@risingVolumeSetting": {},
+  "timeToFullVolumeSetting": "Time to Full Volume",
+  "@timeToFullVolumeSetting": {},
   "snoozeSettingGroup": "Snooze",
   "@snoozeSettingGroup": {},
   "snoozeEnableSetting": "Enabled",
   "@snoozeEnableSetting": {},
   "snoozeLengthSetting": "Length",
   "@snoozeLengthSetting": {},
+  "maxSnoozesSetting": "Max Snoozes",
+  "@maxSnoozesSetting": {},
   "whileSnoozedSettingGroup": "While Snoozed",
   "@whileSnoozedSettingGroup": {},
   "snoozePreventDisablingSetting": "Prevent Disabling",
   "@snoozePreventDisablingSetting": {},
-  "snoozePreventDeletion": "Prevent Deletion",
-  "@snoozePreventDeletion": {},
+  "snoozePreventDeletionSetting": "Prevent Deletion",
+  "@snoozePreventDeletionSetting": {},
   "settings": "Settings",
   "@settings": {},
   "tasksSetting": "Tasks",
@@ -137,6 +320,14 @@
   "@chooseTaskTitle": {},
   "mathTask": "Math Problems",
   "@mathTask": {},
+  "mathEasyDifficulty": "Easy (X + Y)",
+  "@mathEasyDifficulty": {},
+  "mathMediumDifficulty": "Medium (X × Y)",
+  "@mathMediumDifficulty": {},
+  "mathHardDifficulty": "Hard (X × Y + Z)",
+  "@mathHardDifficulty": {},
+  "mathVeryHardDifficulty": "Very Hard (X × Y × Z)",
+  "@mathVeryHardDifficulty": {},
   "retypeTask": "Retype Text",
   "@retypeTask": {},
   "sequenceTask": "Sequence",
@@ -155,6 +346,8 @@
   "@sequenceLengthSetting": {},
   "sequenceGridSizeSetting": "Grid size",
   "@sequenceGridSizeSetting": {},
+  "numberOfProblemsSetting": "Number of Problems",
+  "@numberOfProblemsSetting": {},
   "saveReminderAlert": "Do you want to leave without saving?",
   "@saveReminderAlert": {},
   "yesButton": "Yes",
@@ -205,12 +398,87 @@
   "@stopwatchFastest": {},
   "alarmDescriptionDays": "On {days}",
   "@alarmDescriptionDays": {},
-  "alarmDescriptionRange": "{interval, select, daily{Daily} weekly{Weekly}} from {startDate} to {endDate}",
+  "alarmDescriptionRange": "{interval, select, daily{Daily} weekly{Weekly} other{Other}} from {startDate} to {endDate}",
   "@alarmDescriptionRange": {},
   "stopwatchSlowest": "Slowest",
   "@stopwatchSlowest": {},
   "alarmDescriptionDates": "On {date}{count, plural, =0{} =1{ and 1 other date} other{ and {count} other dates}}",
   "@alarmDescriptionDates": {},
   "stopwatchAverage": "Average",
-  "@stopwatchAverage": {}
+  "@stopwatchAverage": {},
+  "defaultSettingGroup": "Default Settings",
+  "@defaultSettingGroup": {},
+  "alarmsDefaultSettingGroupDescription": "Set default values for new alarms",
+  "@alarmsDefaultSettingGroupDescription" : {},
+  "timerDefaultSettingGroupDescription": "Set default values for new timers",
+  "@timerDefaultSettingGroupDescription": {},
+  "filtersSettingGroup": "Filters",
+  "@filtersSettingGroup": {},
+  "showFiltersSetting": "Show Filters",
+  "@showFiltersSetting": {},
+  "showSortSetting": "Show Sort",
+  "@showSortSetting": {},
+  "notificationsSettingGroup": "Notifications",
+  "@notificationsSettingGroup": {},
+  "showUpcomingAlarmNotificationSetting": "Show Upcoming Alarm Notifications",
+  "@showUpcomingAlarmNotificationSetting": {},
+  "upcomingLeadTimeSetting": "Upcoming Lead Time",
+  "@upcomingLeadTimeSetting": {},
+  "showSnoozeNotificationSetting": "Show Snooze Notifications",
+  "showNotificationSetting": "Show Notification",
+  "presetsSetting": "Presets",
+  "@presetsSetting": {},
+  "newPresetPlaceholder": "New Preset",
+  "@newPresetPlaceholder": {},
+  "dismissActionSetting": "Dismiss Action Type",
+  "@dismissActionSetting": {},
+  "dismissActionSlide": "Slide",
+  "@dismissActionSlide": {},
+  "dismissActionButtons": "Buttons",
+  "@dismissActionButtons": {},
+  "dismissActionAreaButtons": "Area Buttons",
+  "@dismissActionAreaButtons": {},
+  "stopwatchTimeFormatSettingGroup": "Time Format",
+  "@stopwatchTimeFormatSettingGroup": {},
+  "stopwatchShowMillisecondsSetting": "Show Milliseconds",
+  "@stopwatchShowMillisecondsSetting": {},
+  "comparisonLapBarsSettingGroup": "Comparison Lap Bars",
+  "@comparisonLapBarsSettingGroup": {},
+  "showPreviousLapSetting": "Show Previous Lap",
+  "@showPreviousLapSetting": {},
+  "showFastestLapSetting": "Show Fastest Lap",
+  "@showFastestLapSetting": {},
+  "showAverageLapSetting": "Show Average Lap",
+  "@showAverageLapSetting": {},
+  "showSlowestLapSetting": "Show Slowest Lap",
+  "@showSlowestLapSetting": {},
+  "leftHandedSetting": "Left Handed Mode",
+  "@leftHandedSetting": {},
+  "backupSettingGroup": "Settings",
+  "@backupSettingGroup": {},
+  "backupSettingGroupDescription": "Export or Import your settings locally",
+  "@backupSettingGroupDescription": {},
+  "exportSettingsSetting": "Export",
+  "@exportSettingsSetting": {},
+  "exportSettingsSettingDescription": "Export settings to a local file",
+  "@exportSettingsSettingDescription": {},
+  "importSettingsSetting": "Import",
+  "@importSettingsSetting": {},
+  "importSettingsSettingDescription": "Import settings from a local file",
+  "@importSettingsSettingDescription": {},
+  "versionLabel": "Version",
+  "@versionLabel": {},
+  "packageNameLabel": "Package name",
+  "@packageNameLabel": {},
+  "licenseLabel": "License",
+  "@licenseLabel": {},
+  "emailLabel": "Email",
+  "@emailLabel": {},
+  "viewOnGithubLabel": "View on GitHub",
+  "@viewOnGithubLabel": {},
+  "creditsSettingGroup": "Credits",
+  "@creditsSettingGroup": {},
+  "addLengthSetting": "Add Length",
+  "@addLengthSetting": {}
+
 }
