Add alarm screen text

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -234,13 +234,15 @@
   "@alarmDeleteAfterRingingSetting": {},
   "alarmDeleteAfterFinishingSetting" : "Delete After Finishing",
   "@alarmDeleteAfterFinishingSetting": {},
+  "cannotDisableAlarmWhileSnoozedSnackbar": "Cannot disable alarm while it is snoozed",
+  "@cannotDisableAlarmWhileSnoozedSnackbar": {},
   "selectTime": "Select Time",
   "@selectTime": {},
   "cancelButton": "Cancel",
   "@cancelButton": {},
   "customizeButton": "Customize",
   "@customizeButton": {},
-  "saveButton": "Save Button",
+  "saveButton": "Save",
   "@saveButton": {},
   "labelField": "Label",
   "@labelField": {},
@@ -354,8 +356,18 @@
   "@yesButton": {},
   "noButton": "No",
   "@noButton": {},
-  "noItemCreatedMessage": "No {items} created",
+  "noAlarmMessage": "No alarms created",
   "@noItemCreatedMessage": {},
+  "noTimerMessage": "No timers created",
+  "@noTimerMessage": {},
+  "noStopwatchMessage": "No stopwatches created",
+  "@noStopwatchMessage": {},
+  "noTaskMessage": "No tasks created",
+  "@noTaskMessage": {},
+  "noPresetsMessage": "No presets created",
+  "@noPresetsMessage": {},
+  "noLogsMessage": "No alarm logs",
+  "@noLogsMessage": {},
   "deleteButton": "Delete",
   "@deleteButton": {},
   "duplicateButton": "Duplicate",
@@ -364,16 +376,56 @@
   "@skipAlarmButton": {},
   "allFilter": "All",
   "@allFilter": {},
+  "dateFilterGroup": "Date",
+  "@dateFilterGroup": {},
   "todayFilter": "Today",
   "@todayFilter": {},
   "tomorrowFilter": "Tomorrow",
   "@tomorrowFilter": {},
+  "stateFilterGroup": "State",
+  "@stateFilterGroup": {},
+  "activeFilter": "Active",
+  "@activeFilter": {},
   "snoozedFilter": "Snoozed",
   "@snoozedFilter": {},
   "disabledFilter": "Disabled",
   "@disabledFilter": {},
   "completedFilter": "Completed",
   "@completedFilter": {},
+  "sortGroup": "Sort",
+  "@sortGroup": {},
+  "defaultLabel": "Default",
+  "@defaultLabel": {},
+  "remainingTimeDesc": "Remaining Time Descending",
+  "@remainingTimeDesc": {},
+  "remainingTimeAsc": "Remaining Time Ascending",
+  "@remainingTimeAsc": {},
+  "nameAsc": "Name Ascending",
+  "@nameAsc": {},
+  "nameDesc": "Name Descending",
+  "@nameDesc": {},
+  "dateAsc": "Date Ascending",
+  "@dateAsc": {},
+  "dateDesc": "Date Descending",
+  "@dateDesc": {},
+  "timeOfDayAsc": "Time of Day Ascending",
+  "@timeOfDayAsc": {},
+  "timeOfDayDesc": "Time of Day Descending",
+  "@timeOfDayDesc": {},
+  "filterActions": "Filter Actions",
+  "@filterActions": {},
+  "clearFiltersAction": "Clear all filters",
+  "@clearFiltersAction": {},
+  "enableAllFilteredAlarmsAction": "Enable all filtered alarms",
+  "@enableAllFilteredAlarmsAction": {},
+  "disableAllFilteredAlarmsAction": "Disable all filtered alarms",
+  "@disableAllFilteredAlarmsAction": {},
+  "skipAllFilteredAlarmsAction": "Skip all filtered alarms",
+  "@skipAllFilteredAlarmsAction": {},
+  "cancelSkipAllFilteredAlarmsAction": "Cancel skip all filtered alarms",
+  "@cancelSkipAllFilteredAlarmsAction": {},
+  "deleteAllFilteredAction": "Delete all filtered items",
+  "@deleteAllFilteredAAction": {},
   "skippingDescriptionSuffix": "(skipping next occurrence)",
   "@skippingDescriptionSuffix": {},
   "alarmDescriptionSnooze": "Snoozed until {date}",
