Localize filters and sort

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -238,6 +238,8 @@
   "@cannotDisableAlarmWhileSnoozedSnackbar": {},
   "selectTime": "Select Time",
   "@selectTime": {},
+  "timePickerModeButton": "Mode",
+  "@timePickerModeButton": {},
   "cancelButton": "Cancel",
   "@cancelButton": {},
   "customizeButton": "Customize",
@@ -378,6 +380,12 @@
   "@allFilter": {},
   "dateFilterGroup": "Date",
   "@dateFilterGroup": {},
+  "scheduleDateFilterGroup": "Schedule Date",
+  "@scheduleDateFilterGroup" : {},
+  "logTypeFilterGroup" : "Type",
+  "@logTypeFilterGroup" : {},
+  "createdDateFilterGroup": "Created Date",
+  "@createdDateFilterGroup" : {},
   "todayFilter": "Today",
   "@todayFilter": {},
   "tomorrowFilter": "Tomorrow",
@@ -386,31 +394,39 @@
   "@stateFilterGroup": {},
   "activeFilter": "Active",
   "@activeFilter": {},
+  "inactiveFilter": "Inactive",
+  "@inactiveFilter": {},
   "snoozedFilter": "Snoozed",
   "@snoozedFilter": {},
   "disabledFilter": "Disabled",
   "@disabledFilter": {},
   "completedFilter": "Completed",
   "@completedFilter": {},
+  "runningTimerFilter": "Running",
+  "@runningTimerFilter": {},
+  "pausedTimerFilter": "Paused",
+  "@pausedTimerFilter": {},
+  "stoppedTimerFilter": "Stopped",
+  "@stoppedTimerFilter": {},
   "sortGroup": "Sort",
   "@sortGroup": {},
   "defaultLabel": "Default",
   "@defaultLabel": {},
-  "remainingTimeDesc": "Remaining Time Descending",
+  "remainingTimeDesc": "Least time left",
   "@remainingTimeDesc": {},
-  "remainingTimeAsc": "Remaining Time Ascending",
+  "remainingTimeAsc": "Most time left",
   "@remainingTimeAsc": {},
-  "nameAsc": "Name Ascending",
+  "durationAsc": "Shortest",
+  "@durationAsc": {},
+  "durationDesc": "Longest",
+  "@durationDesc": {},
+  "nameAsc": "Label A-Z",
   "@nameAsc": {},
-  "nameDesc": "Name Descending",
+  "nameDesc": "Label Z-A",
   "@nameDesc": {},
-  "dateAsc": "Date Ascending",
-  "@dateAsc": {},
-  "dateDesc": "Date Descending",
-  "@dateDesc": {},
-  "timeOfDayAsc": "Time of Day Ascending",
+  "timeOfDayAsc": "Early hours first",
   "@timeOfDayAsc": {},
-  "timeOfDayDesc": "Time of Day Descending",
+  "timeOfDayDesc": "Late hours first",
   "@timeOfDayDesc": {},
   "filterActions": "Filter Actions",
   "@filterActions": {},
