--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -207,19 +207,6 @@
   "@backupSettingGroupDescription": {},
   "alarmWeekdaysSetting": "Week Days",
   "@alarmWeekdaysSetting": {},
-  "mondayLetter": "M",
-  "@mondayLetter": {},
-  "tuesdayLetter": "T",
-  "@tuesdayLetter": {},
-  "wednesdayLetter": "W",
-  "@wednesdayLetter": {},
-  "thursdayLetter": "T",
-  "@thursdayLetter": {},
-  "fridayLetter": "F",
-  "@fridayLetter": {},
-  "saturdayLetter": "S",
-  "@saturdayLetter": {},
-  "sundayLetter": "S",
   "alarmDatesSetting": "Dates",
   "@alarmDatesSetting": {},
   "alarmRangeSetting": "Date Range",
@@ -376,6 +363,10 @@
   "@duplicateButton": {},
   "skipAlarmButton": "Skip Next Alarm",
   "@skipAlarmButton": {},
+  "cancelSkipAlarmButton": "Cancel Skip",
+  "@cancelSkipAlarmButton": {},
+  "dismissAlarmButton": "Dismiss",
+  "@dismissAlarmButton": {},
   "allFilter": "All",
   "@allFilter": {},
   "dateFilterGroup": "Date",
@@ -462,6 +453,8 @@
   "@stopwatchPrevious": {},
   "alarmDescriptionWeekday": "Every weekday",
   "@alarmDescriptionWeekday": {},
+  "alarmDescriptionWeekly": "Every {days}",
+  "@alarmDescriptionWeekly": {},
   "stopwatchFastest": "Fastest",
   "@stopwatchFastest": {},
   "alarmDescriptionDays": "On {days}",
@@ -547,6 +540,61 @@
   "creditsSettingGroup": "Credits",
   "@creditsSettingGroup": {},
   "addLengthSetting": "Add Length",
-  "@addLengthSetting": {}
-
+  "@addLengthSetting": {},
+  "relativeTime": "{hours}h {relative, select, ahead{ahead} behind{behind} other{Other}}",
+  "@relativeTime": {},
+  "sameTime": "Same time",
+  "@sameTime": {},
+  "searchCityPlaceholder": "Search for a city",
+  "@searchCityPlaceholder": {},
+  "durationPickerTitle": "Choose Duration",
+  "@durationPickerTitle": {},
+  "editButton": "Edit",
+  "@editButton": {},
+  "noLapsMessage": "No laps yet",
+  "@noLapsMessage": {},
+  "elapsedTime": "Elapsed Time",
+  "@elapsedTime": {},
+  "mondayFull": "Monday",
+  "@mondayFull": {},
+  "tuesdayFull": "Tuesday",
+  "@tuesdayFull": {},
+  "wednesdayFull": "Wednesday",
+  "@wednesdayFull": {},
+  "thursdayFull": "Thursday",
+  "@thursdayFull": {},
+  "fridayFull": "Friday",
+  "@fridayFull": {},
+  "saturdayFull": "Saturday",
+  "@saturdayFull": {},
+  "sundayFull": "Sunday",
+  "@sundayFull": {},
+  "mondayShort": "Mon",
+  "@mondayShort": {},
+  "tuesdayShort": "Tue",
+  "@tuesdayShort": {},
+  "wednesdayShort": "Wed",
+  "@wednesdayShort": {},
+  "thursdayShort": "Thu",
+  "@thursdayShort": {},
+  "fridayShort": "Fri",
+  "@fridayShort": {},
+  "saturdayShort": "Sat",
+  "@saturdayShort": {},
+  "sundayShort": "Sun",
+  "@sundayShort": {},
+  "mondayLetter": "M",
+  "@mondayLetter": {},
+  "tuesdayLetter": "T",
+  "@tuesdayLetter": {},
+  "wednesdayLetter": "W",
+  "@wednesdayLetter": {},
+  "thursdayLetter": "T",
+  "@thursdayLetter": {},
+  "fridayLetter": "F",
+  "@fridayLetter": {},
+  "saturdayLetter": "S",
+  "@saturdayLetter": {},
+  "sundayLetter": "S",
+  "@sundayLetter": {}
 }
