Localize clock screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -547,6 +547,8 @@
   "@sameTime": {},
   "searchCityPlaceholder": "Search for a city",
   "@searchCityPlaceholder": {},
+  "cityAlreadyInFavorites": "This city is already in your favorites",
+  "@cityAlreadyInFavorites": {},
   "durationPickerTitle": "Choose Duration",
   "@durationPickerTitle": {},
   "editButton": "Edit",
