Add some remaining strings

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -56,12 +56,12 @@
   "swipActionSwitchTabs": "Switch Tabs",
   "@swipActionSwitchTabs": {},
   "swipeActionSwitchTabsDescription": "Swipe between tabs",
-  "@swipeActionSwitchTabsDescription": {},
+  "@swipeActionSwitchTabsDesc/iption": {},
   "melodiesSetting": "Melodies",
   "@melodiesSetting": {},
   "tagsSetting": "Tags",
   "@tagsSetting": {},
-  "vendorSetting": "Vendor Setting",
+  "vendorSetting": "Vendor Settings",
   "@vendorSetting": {},
   "vendorSettingDescription": "Manually disable vendor-specific optimizations",
   "@vendorSettingDescription": {},
@@ -545,6 +545,8 @@
   "@relativeTime": {},
   "sameTime": "Same time",
   "@sameTime": {},
+  "searchSettingPlaceholder" : "Search for  a setting",
+  "@searchCityPlaceholder": {},
   "searchCityPlaceholder": "Search for a city",
   "@searchCityPlaceholder": {},
   "cityAlreadyInFavorites": "This city is already in your favorites",
