Add more customization to widgets

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -613,14 +613,32 @@
   "@digitalClockSettingGroup": {},
   "layoutSettingGroup": "Layout",
   "@layoutSettingGroup": {},
-  "timeSizeSetting": "Time Size",
-  "@timeSizeSetting": {},
-  "dateSizeSetting": "Date Size",
-  "@dateSizeSetting": {},
   "textSettingGroup": "Text",
   "@textSettingGroup": {},
   "showDateSetting": "Show Date",
   "@showDateSetting": {},
   "settingsTitle": "Settings",
-  "@settingsTitle": {}
+  "@settingsTitle": {},
+  "alignmentSetting" : "Alignment",
+  "@alignmentSetting" : {},
+  "alignmentLeft": "Left",
+  "@alignmentLeft": {},
+  "alignmentCenter": "Center",
+  "@alignmentCenter": {},
+  "alignmentRight": "Right",
+  "@alignmentRight": {},
+  "alignmentJustify": "Justify",
+  "@alignmentJustify": {},
+  "fontWeightSetting": "Font Weight",
+  "@fontWeightSetting": {},
+  "dateSettingGroup": "Date",
+  "@dateSettingGroup": {},
+  "timeSettingGroup": "Time",
+  "@timeSettingGroup": {},
+  "sizeSetting": "Size",
+  "@sizeSetting": {},
+  "defaultPageSetting": "Default Tab",
+  "@defaultPageSetting": {}
+
+  
 }
