Optimize contributors avatars

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -133,7 +133,7 @@
   "@styleThemeOutlineWidthSetting": {},
   "accessibilitySettingGroup": "Accessibility",
   "@accessibilitySettingGroup": {},
-  "backupSettingGroup": "Settings",
+  "backupSettingGroup": "Backup",
   "@backupSettingGroup": {},
   "developerOptionsSettingGroup": "Developer Options",
   "@developerOptionsSettingGroup": {},
