Update permission description

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -81,7 +81,7 @@
   "@permissionsSettingGroup": {},
   "ignoreBatteryOptimizationSetting": "Ignore Battery Optimization",
   "@ignoreBatteryOptimizationSetting": {},
-  "notificationPermissionSetting": "Notifications",
+  "notificationPermissionSetting": "Notifications Permission",
   "@notificationPermissionSetting": {},
   "notificationPermissionAlreadyGranted": "Notifications permission already granted",
   "@notificationPermissionAlreadyGranted": {},
