Add option to change first day of week

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -656,7 +656,11 @@
   "defaultPageSetting": "Default Tab",
   "@defaultPageSetting": {},
   "showMeridiemSetting": "Show AM/PM",
-  "@showMeridiemSetting": {}
+  "@showMeridiemSetting": {},
+  "editPresetsTitle": "Edit Presets",
+  "@editPresetsTitle": {},
+  "firstDayOfWeekSetting": "First Day of Week",
+  "@firstDayOfWeekSetting": {}
 
   
 }
