--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -660,7 +660,11 @@
   "editPresetsTitle": "Edit Presets",
   "@editPresetsTitle": {},
   "firstDayOfWeekSetting": "First Day of Week",
-  "@firstDayOfWeekSetting": {}
+  "@firstDayOfWeekSetting": {},
+  "translateLink": "Translate",
+  "@translateLink": {},
+  "translateDescription": "Help translate the app",
+  "@translateDescription": {}
 
   
 }
