Add separator option for digital clock widget

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -664,7 +664,9 @@
   "translateLink": "Translate",
   "@translateLink": {},
   "translateDescription": "Help translate the app",
-  "@translateDescription": {}
+  "@translateDescription": {},
+  "separatorSetting": "Separator",
+  "@separatorSetting": {}
 
   
 }
