Add next alarm filter

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -674,7 +674,35 @@
   "editTagLabel": "Edit Tag",
   "@editTagLabel": {},
   "tagNamePlaceholder": "Tag name",
-  "@tagNamePlaceholder": {}
-
-  
+  "@tagNamePlaceholder": {},
+  "hoursString": "{count, plural, =0{} =1{1 hour} other{{count} hours}}",
+  "@hoursString": {},
+  "minutesString": "{count, plural, =0{} =1{1 minute} other{{count} minutes}}",
+  "@minutesString": {},
+  "secondsString": "{count, plural, =0{} =1{1 second} other{{count} seconds}}",
+  "@secondsString": {},
+  "daysString":  "{count, plural, =0{} =1{1 day} other{{count} days}}",
+  "@daysString": {},
+  "weeksString":  "{count, plural, =0{} =1{1 week} other{{count} weeks}}",
+  "@weeksString": {},
+  "monthsString":  "{count, plural, =0{} =1{1 month} other{{count} months}}",
+  "@monthsString": {},
+  "yearsString":  "{count, plural, =0{} =1{1 year} other{{count} years}}",
+  "@yearsString": {},
+  "lessThanOneMinute": "less than 1 minute",
+  "@lessThanOneMinute": {},
+  "alarmRingInMessage": "Alarm will ring in {duration}",
+  "@alarmRingInMessage": {},
+  "nextAlarmIn": "Next: {duration}",
+  "@nextAlarmIn": {},
+  "combinedTime": "{hours} and {minutes}",
+  "@combinedTime": {},
+  "shortHoursString": "{hours}h",
+  "@shortTimeFormat": {},
+  "shortMinutesString": "{minutes}m",
+  "@shortMinutesString": {},
+  "shortSecondsString": "{seconds}s",
+  "@shortSecondsString": {},
+  "showNextAlarm": "Show Next Alarm",
+  "@showNextAlarm": {}
 }
