Add foreground notification option

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -704,5 +704,7 @@
   "shortSecondsString": "{seconds}s",
   "@shortSecondsString": {},
   "showNextAlarm": "Show Next Alarm",
-  "@showNextAlarm": {}
+  "@showNextAlarm": {},
+  "showForegroundNotification": "Show Foreground Notification",
+  "@showForegroundNotification": {}
 }
