--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -49,6 +49,8 @@
   "@durationPickerSetting": {},
   "pickerRings": "Rings",
   "@pickerRings": {},
+  "interactionsSettingGroup": "Interactions",
+  "@interactionsSettingGroup": {},
   "swipeActionSetting": "Swipe Action",
   "@swipeActionSetting": {},
   "swipActionCardAction": "Card Actions",
@@ -59,6 +61,12 @@
   "@swipActionSwitchTabs": {},
   "swipeActionSwitchTabsDescription": "Swipe between tabs",
   "@swipeActionSwitchTabsDescription": {},
+  "longPressActionSetting": "Long Press Action",
+  "@longPressActionSetting": {},
+  "longPressReorderAction": "Reorder",
+  "@longPressReorderAction": {},
+  "longPressSelectAction": "Multiselect",
+  "@longPressSelectAction": {},
   "melodiesSetting": "Melodies",
   "@melodiesSetting": {},
   "tagsSetting": "Tags",
