Add multiselect chips

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -417,6 +417,10 @@
   "@pausedTimerFilter": {},
   "stoppedTimerFilter": "Stopped",
   "@stoppedTimerFilter": {},
+  "selectionStatus": "{n} selected",
+  "@selectionStatus": {},
+  "selectAll": "Select all",
+  "@selectAll": {},
   "sortGroup": "Sort",
   "@sortGroup": {},
   "defaultLabel": "Default",
