Add numpad input

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -45,6 +45,8 @@
   "@pickerInput": {},
   "pickerSpinner": "Spinner",
   "@pickerSpinner": {},
+  "pickerNumpad": "Numpad",
+  "@pickerNumpad": {},
   "durationPickerSetting": "Duration Picker",
   "@durationPickerSetting": {},
   "pickerRings": "Rings",
