Add option to reduce volume while solving tasks

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -301,6 +301,8 @@
   "@audioChannelMedia": {},
   "volumeSetting": "Volume",
   "@volumeSetting": {},
+  "volumeWhileTasks": "Volume while solving Tasks",
+  "@volumeWhileTasks": {},
   "risingVolumeSetting": "Rising Volume",
   "@risingVolumeSetting": {},
   "timeToFullVolumeSetting": "Time to Full Volume",
